# NetCpp

./: .clang-format  LICENSE  README.md  TODO.md  meson.build
include/: request.hh  response.hh  server.hh  version.hh
include/core/: request.hh  response.hh
include/http1/: request.hh  response.hh
include/http2/: frames.hh  hpack.hh  request.hh  tables.hh
include/posix/: descriptor.hh
include/utils/: http_version.hh  method.hh  parse_headers.hh  status.hh  uint24.hh  uint31.hh
include/windows/: descriptor.hh  socket.hh
src/: main.cc  request.cc  response.cc  server.cc
src/core/: request.cc  response.cc
src/http1/: request.cc  response.cc
src/http2/: frames.cc  hpack.cc  request.cc
src/posix/: descriptor.cc
src/utils/: http_version.cc  method.cc  parse_headers.cc  status.cc
src/windows/: descriptor.cc  socket.cc
test/: core.cc  hpack.cc  http2.cc
test/windows/: descriptor.cc
